--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -121,88 +121,110 @@ data("brfss_smart2010") #load data
 ```
 
 ``` r
-cleanbrfss_data = 
-  brfss_smart2010 %>% #clean data 
-  janitor::clean_names() %>% 
-  separate(locationdesc, into = c("state", "county"), sep=3) %>%
-  select (-locationabbr) %>%
-   filter(topic == "Overall Health", response %in% c("Poor","Fair","Good","Very good", "Excellent")) %>% 
-  mutate(county = stringr::str_replace(county, "- ", ""), response = factor(response, levels = c("Poor", "Fair","Good", "Very good", "Excellent"))) 
+cleanbrfss_data = brfss_smart2010 %>%
+janitor::clean_names() %>%
+separate(locationdesc, into = c("state", "county"), sep= 3) %>% 
+mutate(county= stringr::str_replace(county, "- ", "")) %>% 
+filter(topic == "Overall Health", response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) %>%
+mutate(response = factor(response, levels = c("Poor","Fair","Good","Very good", "Excellent" ))) %>%
+select(-state, -location_id, -data_value_footnote_symbol, -data_value_footnote)
 cleanbrfss_data
 ```
 
-    ## # A tibble: 10,625 x 23
-    ##     year state county class topic question response sample_size data_value
-    ##    <int> <chr> <chr>  <chr> <chr> <chr>    <fct>          <int>      <dbl>
-    ##  1  2010 "AL " Jeffe… Heal… Over… How is … Excelle…          94       18.9
-    ##  2  2010 "AL " Jeffe… Heal… Over… How is … Very go…         148       30  
-    ##  3  2010 "AL " Jeffe… Heal… Over… How is … Good             208       33.1
-    ##  4  2010 "AL " Jeffe… Heal… Over… How is … Fair             107       12.5
-    ##  5  2010 "AL " Jeffe… Heal… Over… How is … Poor              45        5.5
-    ##  6  2010 "AL " Mobil… Heal… Over… How is … Excelle…          91       15.6
-    ##  7  2010 "AL " Mobil… Heal… Over… How is … Very go…         177       31.3
-    ##  8  2010 "AL " Mobil… Heal… Over… How is … Good             224       31.2
-    ##  9  2010 "AL " Mobil… Heal… Over… How is … Fair             120       15.5
-    ## 10  2010 "AL " Mobil… Heal… Over… How is … Poor              66        6.4
-    ## # … with 10,615 more rows, and 14 more variables:
+    ## # A tibble: 10,625 x 20
+    ##     year locationabbr county class topic question response sample_size
+    ##    <int> <chr>        <chr>  <chr> <chr> <chr>    <fct>          <int>
+    ##  1  2010 AL           Jeffe… Heal… Over… How is … Excelle…          94
+    ##  2  2010 AL           Jeffe… Heal… Over… How is … Very go…         148
+    ##  3  2010 AL           Jeffe… Heal… Over… How is … Good             208
+    ##  4  2010 AL           Jeffe… Heal… Over… How is … Fair             107
+    ##  5  2010 AL           Jeffe… Heal… Over… How is … Poor              45
+    ##  6  2010 AL           Mobil… Heal… Over… How is … Excelle…          91
+    ##  7  2010 AL           Mobil… Heal… Over… How is … Very go…         177
+    ##  8  2010 AL           Mobil… Heal… Over… How is … Good             224
+    ##  9  2010 AL           Mobil… Heal… Over… How is … Fair             120
+    ## 10  2010 AL           Mobil… Heal… Over… How is … Poor              66
+    ## # … with 10,615 more rows, and 12 more variables: data_value <dbl>,
     ## #   confidence_limit_low <dbl>, confidence_limit_high <dbl>,
     ## #   display_order <int>, data_value_unit <chr>, data_value_type <chr>,
-    ## #   data_value_footnote_symbol <chr>, data_value_footnote <chr>,
-    ## #   data_source <chr>, class_id <chr>, topic_id <chr>, location_id <chr>,
-    ## #   question_id <chr>, respid <chr>, geo_location <chr>
+    ## #   data_source <chr>, class_id <chr>, topic_id <chr>, question_id <chr>,
+    ## #   respid <chr>, geo_location <chr>
 
 States that were observed in 2002 at 7 or more locations:
 
 ``` r
 cleanbrfss_data %>% 
   filter(year == 2002) %>% 
-  group_by(state) %>% 
+  group_by(locationabbr) %>% 
   summarize(n_location = n_distinct(county)) %>% 
   filter(n_location >= 7) %>%
   arrange(n_location)
 ```
 
     ## # A tibble: 6 x 2
-    ##   state n_location
-    ##   <chr>      <int>
-    ## 1 "CT "          7
-    ## 2 "FL "          7
-    ## 3 "NC "          7
-    ## 4 "MA "          8
-    ## 5 "NJ "          8
-    ## 6 "PA "         10
+    ##   locationabbr n_location
+    ##   <chr>             <int>
+    ## 1 CT                    7
+    ## 2 FL                    7
+    ## 3 NC                    7
+    ## 4 MA                    8
+    ## 5 NJ                    8
+    ## 6 PA                   10
 
-  - In 2002, Connecticut, Florida, Massachusetts, North Carolina, New
-    Jersey, and Pennsylvania were observed at 7 or more locations.
+\`\`\` \* In 2002, Connecticut, Florida, Massachusetts, North Carolina,
+New Jersey, and Pennsylvania were observed at 7 or more locations.
 
 States that were observed in 2010 at 7 or more locations:
 
 ``` r
 cleanbrfss_data %>% 
   filter(year == 2010) %>% 
-  group_by(state) %>% 
+  group_by(locationabbr) %>% 
   summarize(n_location = n_distinct(county)) %>% 
   filter(n_location >= 7) %>%
   arrange(n_location)
 ```
 
     ## # A tibble: 14 x 2
-    ##    state n_location
-    ##    <chr>      <int>
-    ##  1 "CO "          7
-    ##  2 "PA "          7
-    ##  3 "SC "          7
-    ##  4 "OH "          8
-    ##  5 "MA "          9
-    ##  6 "NY "          9
-    ##  7 "NE "         10
-    ##  8 "WA "         10
-    ##  9 "CA "         12
-    ## 10 "MD "         12
-    ## 11 "NC "         12
-    ## 12 "TX "         16
-    ## 13 "NJ "         19
-    ## 14 "FL "         41
+    ##    locationabbr n_location
+    ##    <chr>             <int>
+    ##  1 CO                    7
+    ##  2 PA                    7
+    ##  3 SC                    7
+    ##  4 OH                    8
+    ##  5 MA                    9
+    ##  6 NY                    9
+    ##  7 NE                   10
+    ##  8 WA                   10
+    ##  9 CA                   12
+    ## 10 MD                   12
+    ## 11 NC                   12
+    ## 12 TX                   16
+    ## 13 NJ                   19
+    ## 14 FL                   41
+
+``` r
+cleanbrfss_data
+```
+
+    ## # A tibble: 10,625 x 20
+    ##     year locationabbr county class topic question response sample_size
+    ##    <int> <chr>        <chr>  <chr> <chr> <chr>    <fct>          <int>
+    ##  1  2010 AL           Jeffe… Heal… Over… How is … Excelle…          94
+    ##  2  2010 AL           Jeffe… Heal… Over… How is … Very go…         148
+    ##  3  2010 AL           Jeffe… Heal… Over… How is … Good             208
+    ##  4  2010 AL           Jeffe… Heal… Over… How is … Fair             107
+    ##  5  2010 AL           Jeffe… Heal… Over… How is … Poor              45
+    ##  6  2010 AL           Mobil… Heal… Over… How is … Excelle…          91
+    ##  7  2010 AL           Mobil… Heal… Over… How is … Very go…         177
+    ##  8  2010 AL           Mobil… Heal… Over… How is … Good             224
+    ##  9  2010 AL           Mobil… Heal… Over… How is … Fair             120
+    ## 10  2010 AL           Mobil… Heal… Over… How is … Poor              66
+    ## # … with 10,615 more rows, and 12 more variables: data_value <dbl>,
+    ## #   confidence_limit_low <dbl>, confidence_limit_high <dbl>,
+    ## #   display_order <int>, data_value_unit <chr>, data_value_type <chr>,
+    ## #   data_source <chr>, class_id <chr>, topic_id <chr>, question_id <chr>,
+    ## #   respid <chr>, geo_location <chr>
 
   - In 2010, Colorado, Pennsylvania, South Carolina, Ohio, Maryland, New
     York, Nebraska, Washington, California, Maryland, North Carolina,
@@ -214,25 +236,25 @@ averages of the data\_value across locations within a state:
 ``` r
 brfss_excellent = cleanbrfss_data %>% 
   filter(response == "Excellent") %>%
-  group_by(year, state, county) %>% 
+  group_by(year, locationabbr, county) %>% 
   summarize(avg_data = mean(data_value))
 brfss_excellent
 ```
 
     ## # A tibble: 2,125 x 4
-    ## # Groups:   year, state [443]
-    ##     year state county                 avg_data
-    ##    <int> <chr> <chr>                     <dbl>
-    ##  1  2002 "AK " Anchorage Municipality     27.9
-    ##  2  2002 "AL " Jefferson County           18.5
-    ##  3  2002 "AR " Pulaski County             24.1
-    ##  4  2002 "AZ " Maricopa County            21.6
-    ##  5  2002 "AZ " Pima County                26.6
-    ##  6  2002 "CA " Los Angeles County         22.7
-    ##  7  2002 "CO " Adams County               21.2
-    ##  8  2002 "CO " Arapahoe County            25.5
-    ##  9  2002 "CO " Denver County              22.2
-    ## 10  2002 "CO " Jefferson County           23.4
+    ## # Groups:   year, locationabbr [443]
+    ##     year locationabbr county                 avg_data
+    ##    <int> <chr>        <chr>                     <dbl>
+    ##  1  2002 AK           Anchorage Municipality     27.9
+    ##  2  2002 AL           Jefferson County           18.5
+    ##  3  2002 AR           Pulaski County             24.1
+    ##  4  2002 AZ           Maricopa County            21.6
+    ##  5  2002 AZ           Pima County                26.6
+    ##  6  2002 CA           Los Angeles County         22.7
+    ##  7  2002 CO           Adams County               21.2
+    ##  8  2002 CO           Arapahoe County            25.5
+    ##  9  2002 CO           Denver County              22.2
+    ## 10  2002 CO           Jefferson County           23.4
     ## # … with 2,115 more rows
 
 “Spaghetti” plot of this average value over time within a state (that
@@ -240,7 +262,7 @@ is, make a plot showing a line for each state across years):
 
 ``` r
 brfss_excellent %>%
-ggplot(aes(x = year , y = avg_data, color=state)) + geom_line() + 
+ggplot(aes(x = year , y = avg_data, color= locationabbr)) + geom_line() + 
 labs(title = "Average Value Over Time Within Each State", x = "Year", y = "Average Value") + 
 viridis::scale_color_viridis(discrete = TRUE) + theme_minimal() + theme(plot.title = element_text(hjust = 0.5, size = 14), axis.text.x = element_text(angle=70, hjust=1)) + theme(legend.position = "right", axis.text.x = element_text(angle=70, hjust=1))
 ```
@@ -251,6 +273,45 @@ Two-panel plot showing, for the years 2006, and 2010, distribution of
 data\_value for responses (“Poor” to “Excellent”) among locations in NY
 State:
 
+``` r
+combined_plot = 
+cleanbrfss_data %>%
+  filter(topic == "Overall Health", 
+  year == "2006"| 
+  year == "2010",
+  locationabbr == "NY") 
+combined_plot
+```
+
+    ## # A tibble: 75 x 20
+    ##     year locationabbr county class topic question response sample_size
+    ##    <int> <chr>        <chr>  <chr> <chr> <chr>    <fct>          <int>
+    ##  1  2010 NY           Bronx… Heal… Over… How is … Excelle…          61
+    ##  2  2010 NY           Bronx… Heal… Over… How is … Very go…         105
+    ##  3  2010 NY           Bronx… Heal… Over… How is … Good             151
+    ##  4  2010 NY           Bronx… Heal… Over… How is … Fair              86
+    ##  5  2010 NY           Bronx… Heal… Over… How is … Poor              31
+    ##  6  2010 NY           Erie … Heal… Over… How is … Excelle…          69
+    ##  7  2010 NY           Erie … Heal… Over… How is … Very go…         169
+    ##  8  2010 NY           Erie … Heal… Over… How is … Good             154
+    ##  9  2010 NY           Erie … Heal… Over… How is … Fair              69
+    ## 10  2010 NY           Erie … Heal… Over… How is … Poor              16
+    ## # … with 65 more rows, and 12 more variables: data_value <dbl>,
+    ## #   confidence_limit_low <dbl>, confidence_limit_high <dbl>,
+    ## #   display_order <int>, data_value_unit <chr>, data_value_type <chr>,
+    ## #   data_source <chr>, class_id <chr>, topic_id <chr>, question_id <chr>,
+    ## #   respid <chr>, geo_location <chr>
+
+``` r
+twopanel_plot = combined_plot %>% 
+  ggplot(aes(x = response, y = data_value, color = response))+
+  geom_boxplot()+
+  facet_grid(. ~year) 
+twopanel_plot
+```
+
+![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
 # Problem 3
 
 ``` r
@@ -259,8 +320,8 @@ acc_data =
   janitor::clean_names() %>%
   pivot_longer (
     activity_1:activity_1440, names_to = "activity_min", values_to = "activity_count") %>%
-  mutate(activity_min = stringr::str_replace(activity_min, "activity_", " ")) %>%
-  mutate(weekkday = day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"), weekend = day %in% c("Saturday", "Sunday"))
+  mutate(activity_min = stringr::str_replace(activity_min, "activity_", " "), weekkday = day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"), weekend = day %in% c("Saturday", "Sunday")) %>%
+select (-day_id)
 ```
 
     ## Parsed with column specification:
@@ -275,31 +336,53 @@ acc_data =
 acc_data
 ```
 
-    ## # A tibble: 50,400 x 7
-    ##     week day_id day    activity_min activity_count weekkday weekend
-    ##    <dbl>  <dbl> <chr>  <chr>                 <dbl> <lgl>    <lgl>  
-    ##  1     1      1 Friday " 1"                   88.4 TRUE     FALSE  
-    ##  2     1      1 Friday " 2"                   82.2 TRUE     FALSE  
-    ##  3     1      1 Friday " 3"                   64.4 TRUE     FALSE  
-    ##  4     1      1 Friday " 4"                   70.0 TRUE     FALSE  
-    ##  5     1      1 Friday " 5"                   75.0 TRUE     FALSE  
-    ##  6     1      1 Friday " 6"                   66.3 TRUE     FALSE  
-    ##  7     1      1 Friday " 7"                   53.8 TRUE     FALSE  
-    ##  8     1      1 Friday " 8"                   47.8 TRUE     FALSE  
-    ##  9     1      1 Friday " 9"                   55.5 TRUE     FALSE  
-    ## 10     1      1 Friday " 10"                  43.0 TRUE     FALSE  
+    ## # A tibble: 50,400 x 6
+    ##     week day    activity_min activity_count weekkday weekend
+    ##    <dbl> <chr>  <chr>                 <dbl> <lgl>    <lgl>  
+    ##  1     1 Friday " 1"                   88.4 TRUE     FALSE  
+    ##  2     1 Friday " 2"                   82.2 TRUE     FALSE  
+    ##  3     1 Friday " 3"                   64.4 TRUE     FALSE  
+    ##  4     1 Friday " 4"                   70.0 TRUE     FALSE  
+    ##  5     1 Friday " 5"                   75.0 TRUE     FALSE  
+    ##  6     1 Friday " 6"                   66.3 TRUE     FALSE  
+    ##  7     1 Friday " 7"                   53.8 TRUE     FALSE  
+    ##  8     1 Friday " 8"                   47.8 TRUE     FALSE  
+    ##  9     1 Friday " 9"                   55.5 TRUE     FALSE  
+    ## 10     1 Friday " 10"                  43.0 TRUE     FALSE  
     ## # … with 50,390 more rows
 
-  - This dataset has 50400 observations with 7. Key variables include
-    order details, product name, aisle, and department with respective
-    numeric IDs associated with them. Variables include the day of the
-    week the activity occurs, the minute in which activity is being
-    recorded, and the acceleration count of the 63 y/o male patient’s
-    body at each minute. Additionally, the dataset includes variables
-    that categorize if the date/minute/count being logged is a weekend
-    or weekday.
+  - This dataset has 50400 observations with 6 variables. Key variables
+    include order details, product name, aisle, and department with
+    respective numeric IDs associated with them. Variables include the
+    day of the week the activity occurs, the minute in which activity is
+    being recorded, and the acceleration count of the 63 y/o male
+    patient’s body at each minute. Additionally, the dataset includes
+    variables that categorize if the date/minute/count being logged is a
+    weekend or weekday.
 
-Aggregate dataset accross minutes to create a total activity variable
-for each day, and create a table showing these totals:
+Aggregate dataset across minutes to create a total activity variable for
+each day, and create a table showing these totals:
 
-  - Trends include:
+``` r
+total_activity = acc_data %>%
+  group_by(day) %>%
+  summarize(total_activity = mean (activity_count)) %>%
+  arrange(desc(total_activity)) %>%
+  knitr::kable()
+total_activity
+```
+
+| day       | total\_activity |
+| :-------- | --------------: |
+| Friday    |        318.2931 |
+| Wednesday |        295.8017 |
+| Thursday  |        290.4376 |
+| Sunday    |        266.5574 |
+| Monday    |        258.1526 |
+| Tuesday   |        249.8942 |
+| Saturday  |        190.1718 |
+
+Single-panel plot that shows the 24-hour activity time courses for each
+day and use color to indicate day of the week:
+
+  - Patterns or conclusions you can make based on this graph
