--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -171,8 +171,8 @@ cleanbrfss_data %>%
     ## 5 NJ                    8
     ## 6 PA                   10
 
-\`\`\` \* In 2002, Connecticut, Florida, Massachusetts, North Carolina,
-New Jersey, and Pennsylvania were observed at 7 or more locations.
+  - In 2002, Connecticut, Florida, Massachusetts, North Carolina, New
+    Jersey, and Pennsylvania were observed at 7 or more locations.
 
 States that were observed in 2010 at 7 or more locations:
 
@@ -320,8 +320,7 @@ acc_data =
   janitor::clean_names() %>%
   pivot_longer (
     activity_1:activity_1440, names_to = "activity_min", values_to = "activity_count") %>%
-  mutate(activity_min = stringr::str_replace(activity_min, "activity_", " "), weekkday = day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"), weekend = day %in% c("Saturday", "Sunday")) %>%
-select (-day_id)
+  mutate(activity_min = stringr::str_replace(activity_min, "activity_", " "), weekkday = day %in% c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday"), weekend = day %in% c("Saturday", "Sunday")) 
 ```
 
     ## Parsed with column specification:
@@ -336,22 +335,22 @@ select (-day_id)
 acc_data
 ```
 
-    ## # A tibble: 50,400 x 6
-    ##     week day    activity_min activity_count weekkday weekend
-    ##    <dbl> <chr>  <chr>                 <dbl> <lgl>    <lgl>  
-    ##  1     1 Friday " 1"                   88.4 TRUE     FALSE  
-    ##  2     1 Friday " 2"                   82.2 TRUE     FALSE  
-    ##  3     1 Friday " 3"                   64.4 TRUE     FALSE  
-    ##  4     1 Friday " 4"                   70.0 TRUE     FALSE  
-    ##  5     1 Friday " 5"                   75.0 TRUE     FALSE  
-    ##  6     1 Friday " 6"                   66.3 TRUE     FALSE  
-    ##  7     1 Friday " 7"                   53.8 TRUE     FALSE  
-    ##  8     1 Friday " 8"                   47.8 TRUE     FALSE  
-    ##  9     1 Friday " 9"                   55.5 TRUE     FALSE  
-    ## 10     1 Friday " 10"                  43.0 TRUE     FALSE  
+    ## # A tibble: 50,400 x 7
+    ##     week day_id day    activity_min activity_count weekkday weekend
+    ##    <dbl>  <dbl> <chr>  <chr>                 <dbl> <lgl>    <lgl>  
+    ##  1     1      1 Friday " 1"                   88.4 TRUE     FALSE  
+    ##  2     1      1 Friday " 2"                   82.2 TRUE     FALSE  
+    ##  3     1      1 Friday " 3"                   64.4 TRUE     FALSE  
+    ##  4     1      1 Friday " 4"                   70.0 TRUE     FALSE  
+    ##  5     1      1 Friday " 5"                   75.0 TRUE     FALSE  
+    ##  6     1      1 Friday " 6"                   66.3 TRUE     FALSE  
+    ##  7     1      1 Friday " 7"                   53.8 TRUE     FALSE  
+    ##  8     1      1 Friday " 8"                   47.8 TRUE     FALSE  
+    ##  9     1      1 Friday " 9"                   55.5 TRUE     FALSE  
+    ## 10     1      1 Friday " 10"                  43.0 TRUE     FALSE  
     ## # … with 50,390 more rows
 
-  - This dataset has 50400 observations with 6 variables. Key variables
+  - This dataset has 50400 observations with 7 variables. Key variables
     include order details, product name, aisle, and department with
     respective numeric IDs associated with them. Variables include the
     day of the week the activity occurs, the minute in which activity is
@@ -366,7 +365,7 @@ each day, and create a table showing these totals:
 ``` r
 total_activity = acc_data %>%
   group_by(day) %>%
-  summarize(total_activity = mean (activity_count)) %>%
+  summarize(total_activity = sum (activity_count)) %>%
   arrange(desc(total_activity)) %>%
   knitr::kable()
 total_activity
@@ -374,15 +373,31 @@ total_activity
 
 | day       | total\_activity |
 | :-------- | --------------: |
-| Friday    |        318.2931 |
-| Wednesday |        295.8017 |
-| Thursday  |        290.4376 |
-| Sunday    |        266.5574 |
-| Monday    |        258.1526 |
-| Tuesday   |        249.8942 |
-| Saturday  |        190.1718 |
+| Friday    |         2291711 |
+| Wednesday |         2129772 |
+| Thursday  |         2091151 |
+| Sunday    |         1919213 |
+| Monday    |         1858699 |
+| Tuesday   |         1799238 |
+| Saturday  |         1369237 |
 
 Single-panel plot that shows the 24-hour activity time courses for each
 day and use color to indicate day of the week:
 
-  - Patterns or conclusions you can make based on this graph
+``` r
+acc_data %>% 
+ group_by(day_id, day) %>%
+  summarize(total_counts=sum(activity_count)) %>%
+ggplot(aes(x = day_id, y = total_counts, color = day)) + geom_point() + geom_line() + labs(x="day ID", y = "total activity coutns per day", title = "Total Activity Per Day") + 
+  theme(
+    axis.title = element_text(face="bold"),
+    plot.title = element_text(face="bold")
+  )
+```
+
+![](p8105_hw3_cz2540_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+*Trends and patterns*: The total activity during the weekends (Saturday,
+Sunday) decrease over time until he becomes inactive. Weekday activity
+seems fairly consistent and similar with each other, except on Fridays
+when activity seemed to incline through days 20 to 30. Initially,
+Mondays were increasingly active over time but after day 15 decreased.
