--- a/p8105_hw3_cz2540.md
+++ b/p8105_hw3_cz2540.md
@@ -350,14 +350,12 @@ acc_data
     ## 10     1      1 Friday " 10"                  43.0 TRUE     FALSE  
     ## # … with 50,390 more rows
 
-  - This dataset has 50400 observations with 7 variables. Key variables
-    include order details, product name, aisle, and department with
-    respective numeric IDs associated with them. Variables include the
-    day of the week the activity occurs, the minute in which activity is
-    being recorded, and the acceleration count of the 63 y/o male
-    patient’s body at each minute. Additionally, the dataset includes
-    variables that categorize if the date/minute/count being logged is a
-    weekend or weekday.
+  - This dataset has 50400 observations with 7 variables. Variables
+    include the day of the week the activity occurs, the minute in which
+    activity is being recorded, and the acceleration count of the 63 y/o
+    male patient’s body at each minute. Additionally, the dataset
+    includes variables that categorize if the date/minute/count being
+    logged is a weekend or weekday.
 
 Aggregate dataset across minutes to create a total activity variable for
 each day, and create a table showing these totals:
